Ribbon load balancing

--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=hr-payroll
 server.port=8081
 
-hr-worker.host=http://localhost:8080
+hr-worker.ribbon.listOfServers=localhost:7080,localhost:7081
