Configure eureka clients

--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=hr-payroll
-server.port=8081
+server.port=8080
 
 hr-worker.ribbon.listOfServers=localhost:7080,localhost:7081
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
