--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=hr-worker
-server.port=7080
+server.port=8081
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -10,3 +10,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
