--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=hr-worker
-server.port=8081
+server.port=${PORT:0}
+
+# Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -10,6 +14,3 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
-
-# Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
