--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=hr-payroll
 server.port=8080
 
-hr-worker.ribbon.listOfServers=localhost:7080,localhost:7081
-
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
