--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.cloud.config.server.git.default-label=main
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/brect/microservice-config-exemple/
+
+#spring.cloud.config.server.git.username=${XURUPITA_USER}
+#spring.cloud.config.server.git.password=${XURUPITA_PASS}
