configure project hr-oauth

--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -4,5 +4,7 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/brect/microservice-config-exemple/
 
+spring.cloud.config.server.git.username=brect
+spring.cloud.config.server.git.password=jm090419*
 #spring.cloud.config.server.git.username=${XURUPITA_USER}
 #spring.cloud.config.server.git.password=${XURUPITA_PASS}
